bugfix overlapped chosen

--- a/web/css/table-div.css
+++ b/web/css/table-div.css
@@ -8,7 +8,6 @@
 
 .table-div .panel-content {
     position:relative;
-    z-index: 2;
     margin-bottom: 20px;
 }
 
